[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nowpayments-py"
version = "1.0.0"
description = "Full-featured Python SDK for NOWPayments cryptocurrency payment API"
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Foisalislambd" }
]
keywords = [
    "nowpayments",
    "crypto",
    "cryptocurrency",
    "bitcoin",
    "ethereum",
    "payment",
    "payment-gateway",
    "crypto-payments",
    "payments-api",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial",
]
requires-python = ">=3.8"
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/Foisalislambd/nowpayments-py"
Repository = "https://github.com/Foisalislambd/nowpayments-py"
Documentation = "https://github.com/Foisalislambd/nowpayments-py#readme"

[tool.setuptools.packages.find]
where = ["."]
include = ["nowpayments*"]
